Tag cleanup using new warnings from checktags

--- a/tags/gallopfrey.yaml
+++ b/tags/gallopfrey.yaml
@@ -223,7 +223,7 @@
 /sjs: [+v]
 /someoneneedadoctor: [+doctorwhooves]
 /spaace: [+derpy, +doctorwhooves]
-/sparklerannoyed: [+otherpony]
+/sparklerannoyed: [+v]
 /sparklermad: [+otherpony]
 /sparklerpeeved: [+v]
 /tardis: [+doctorwho, +nonpony]
