--- a/tags/mlas1animotes.yaml
+++ b/tags/mlas1animotes.yaml
@@ -63,7 +63,7 @@
 /twiflap: [+animote, +twilightsparkle]
 /twifly: [+animote, +twilightsparkle]
 /twihorror: [+animote, +twilightsparkle]
-/twilightsparkle: [+animote, +twilightsparkle]
+/twilightsparkle: [+v]
 /twipeck: [+animote, +twilightsparkle]
 /twirun: [+animote, +twilightsparkle]
 /twist: [+animote, +twist]
