--- a/tags/mlas1emotes.yaml
+++ b/tags/mlas1emotes.yaml
@@ -30,13 +30,13 @@
 /ch02: [+cheerilee]
 /ch03: [+cheerilee]
 /ch04: [+cheerilee]
-/ch05: [+cheerilee]
+/ch05: [+v]
 /ch10: [+cheerilee]
 /ch11: [+cheerilee]
 /ch12: [+cheerilee]
 /ch13: [+v]
 /ch14: [+cheerilee]
-/ch15: [+cheerilee]
+/ch15: [+v]
 /ch20: [+cheerilee]
 /ch21: [+cheerilee]
 /ch22: [+cheerilee]
@@ -56,7 +56,7 @@
 /creepybelle: [+sweetiebelle]
 /creepymc: [+applebloom, +scootaloo, +sweetiebelle]
 /crossfire: [+rainbowdash]
-/crunchy: [+gaming, +nonpony]
+/crunchy: [+v]
 /dapper: [+fancypants]
 /darklefun: [+daylightdarkle, +fun, +questionable]
 /darklewithit: [+daylightdarkle, +dealwithit, +sunglasses]
