--- a/tags/mylittlefortress.yaml
+++ b/tags/mylittlefortress.yaml
@@ -15,7 +15,7 @@
 /08: [+colgate]
 /09: [+octavia]
 /10: [+twilightsparkle]
-/100: [+rarity]
+/100: [+v]
 /101: [+v]
 /102: [+princessluna]
 /103: [+spike]
@@ -54,6 +54,6 @@
 /rainbonkdash: [+v]
 /rainderp: [+v]
 /rarispy: [+rarity]
-/sanic: [+rainbowdash]
+/sanic: [+v]
 /sbsmug: [+otherpony, +shadowbolt]
 /smugtrixie: [+v]
