--- a/tags/mylittlenanners.yaml
+++ b/tags/mylittlenanners.yaml
@@ -466,7 +466,7 @@
 /bwahaha: [+banana, +questionable, +rarity]
 /bwhooves: [+banana, +doctorwhooves, +questionable]
 /bzecora: [+banana, +questionable, +zecora]
-/craft03: [+nonpony]
+/craft03: [+v]
 /craftshrug: [+nonpony]
 /dasnice: [+manspike, +spike]
 /derpysad: [+derpy]
