--- a/tags/ponyanarchism.yaml
+++ b/tags/ponyanarchism.yaml
@@ -7,9 +7,9 @@
 /fut10: [+futashy]
 /fut11: [+futashy]
 /fut12: [+futashy]
-/fut13: [+futashy, +nsfw]
-/fut14: [+futashy, +nsfw]
-/fut15: [+futashy, +nsfw]
+/fut13: [+v]
+/fut14: [+v]
+/fut15: [+v]
 /fut2: [+futashy]
 /fut3: [+futashy]
 /fut4: [+futashy, +nsfw]
