--- a/tags/thebestpony.yaml
+++ b/tags/thebestpony.yaml
@@ -45,17 +45,17 @@
 /birdnest: [+fluttershy]
 /bonlove: [+bonbon]
 /boringg3: [+cheerilee, +oldgen]
-/bpa00: [+fluttershy, +spiderman]
+/bpa00: [+v]
 /bpa01: [+v]
 /bpa02: [+v]
 /bpa03: [+v]
-/bpa04: [+pinkiepie]
+/bpa04: [+v]
 /bpa05: [+v]
 /bpa06: [+fluttershy]
 /bpa07: [+v]
 /bpa08: [+v]
 /bpa09: [+v]
-/bpa10: [+spiderman]
+/bpa10: [+v]
 /bpa11: [+v]
 /bpa12: [+v]
 /bpa13: [+v]
@@ -65,7 +65,7 @@
 /bpa17: [+v]
 /bpa18: [+v]
 /bpa19: [+v]
-/bpa20: [+spiderman]
+/bpa20: [+v]
 /bpa21: [+v]
 /bpa22: [+v]
 /bpa23: [+v]
@@ -286,7 +286,7 @@
 /bpf13: [+v]
 /bpf14: [+smooze]
 /bpf15: [+v]
-/bpf16: [+mashup, +pinkiepie]
+/bpf16: [+v]
 /bpf17: [+v]
 /bpf18: [+v]
 /bpf19: [+v]
@@ -583,7 +583,7 @@
 /pumpeww: [+caketwins]
 /pwobjection: [+nonpony]
 /pyro: [+nonpony]
-/r60fluts: [+fluttershy, +spiderman]
+/r60fluts: [+v]
 /r60jig: [+v]
 /r60pose: [+v]
 /rabgrin: [+v]
