--- a/tags/vinylscratch.yaml
+++ b/tags/vinylscratch.yaml
@@ -1,4 +1,4 @@
-/hnnng: [+nonpony]
+/hnnng: [+v]
 /laying: [+v]
 /shrug: [+v]
 /tableflip: [+tableflip, +vinylscratch]
@@ -60,6 +60,6 @@
 /vstear: [+vinylscratch]
 /vswhathefuck: [+vinylscratch]
 /vswink: [+vinylscratch]
-/vswtf: [+vinylscratch]
-/vsyds: [+vinylscratch]
+/vswtf: [+v]
+/vsyds: [+v]
 /vsyoudontsay: [+vinylscratch]
