--- a/tags/mylittlelistentothis.yaml
+++ b/tags/mylittlelistentothis.yaml
@@ -33,7 +33,7 @@
 /orschswaifu: [+v]
 /pens: [+ocpony]
 /phei: [+filly, +twilightsparkle]
-/pheicry: [+filly, +twilightsparkle]
+/pheicry: [+animote, +filly, +twilightsparkle]
 /pheidance: [+animote, +filly, +twilightsparkle]
 /pinkiebone: [+pinkiepie]
 /pinkieshock: [+pinkiepie]
