Stylesheet/emote/tag updates 2012-10-14

--- a/emotes/pankakke.yaml
+++ b/emotes/pankakke.yaml
@@ -1,3 +1,8 @@
+/acer:
+  null:
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
+    Offset: [-1561, 0]
+    Size: [196, 150]
 /apghoofpump:
   null:
     Image: http://d.thumbs.redditmedia.com/TJDcYGtaoSuBWrx3.png
@@ -22,12 +27,12 @@
     Size: [150, 150]
 /dinsfire:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-601, 0]
     Size: [141, 150]
 /dintrot:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-601, 0]
     Size: [141, 150]
 /doctordrunk:
@@ -41,17 +46,17 @@
     Size: [252, 300]
 /flutterhey:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-829, 0]
     Size: [150, 150]
 /gdb:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-482, 0]
     Size: [119, 150]
 /gdbsmirk:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-482, 0]
     Size: [119, 150]
 /hellocake:
@@ -61,7 +66,7 @@
     Size: [101, 150]
 /mangohug:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-1324, 0]
     Size: [123, 150]
 /notthebees:
@@ -71,7 +76,7 @@
     Size: [190, 150]
 /octaviagasm:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-1165, 0]
     Size: [159, 150]
 /pabbored:
@@ -136,7 +141,7 @@
     Size: [70, 70]
 /petra:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-1447, 0]
     Size: [114, 150]
 /pflutterjerk:
@@ -161,11 +166,11 @@
     Size: [184, 150]
 /pghoofpump:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Size: [71, 150]
 /pglegcross:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-198, 0]
     Size: [67, 150]
 /pgrannysmith:
@@ -175,12 +180,12 @@
     Size: [70, 70]
 /pgshock:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-71, 0]
     Size: [127, 150]
 /pgshuffle:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-265, 0]
     Size: [78, 150]
 /plunateehee:
@@ -200,7 +205,7 @@
     Size: [70, 70]
 /ponykakke:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-343, 0]
     Size: [139, 150]
 /ppinkiefear:
@@ -279,12 +284,12 @@
     Size: [70, 70]
 /sistersprankton:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-742, 0]
     Size: [87, 150]
 /sisterzealot:
   null:
-    Image: http://a.thumbs.redditmedia.com/YGzFag3ubtDtjMyH.png
+    Image: http://b.thumbs.redditmedia.com/5n7oTOMD0-RUhacg.png
     Offset: [-979, 0]
     Size: [186, 150]
 /smothered:
