--- a/tags/pankakke.yaml
+++ b/tags/pankakke.yaml
@@ -1,3 +1,4 @@
+/acer: [+fluttershy]
 /apghoofpump: [+animote, +ocpony]
 /apglegcross: [+animote, +ocpony]
 /apgshuffle: [+animote, +ocpony]
@@ -19,7 +20,7 @@
 /pajlie: [+applejack, +pancake]
 /pajsup: [+applejack, +pancake]
 /pan10: [+nonpony]
-/pancalcos: [+nonpony]
+/pancalcos: [+nonpony, +pancake]
 /panwaffbattle: [+nonpony]
 /pcadance: [+cadance, +pancake]
 /pcelestiamad: [+pancake, +princesscelestia]
