Stylesheet/emote/tag updates 2012-10-15

--- a/emotes/mylittlefoodmanes.yaml
+++ b/emotes/mylittlefoodmanes.yaml
@@ -138,6 +138,10 @@
     Image: http://b.thumbs.redditmedia.com/G-IHzYMRY51zkl9U.png
     Offset: [-93, 0]
     Size: [90, 90]
+/sage:
+  null:
+    Image: http://f.thumbs.redditmedia.com/k9ngx_uh8bh9vyCk.png
+    Size: [191, 224]
 /sagepuke:
   null:
     Image: http://e.thumbs.redditmedia.com/bJRuSDQUmyMgMRr4.png
@@ -153,10 +157,6 @@
   null:
     Image: http://d.thumbs.redditmedia.com/QX9LoWIiMQZXzK2E.png
     Size: [290, 200]
-/t18:
-  null:
-    Image: http://a.thumbs.redditmedia.com/cEw2dsib7wGTDdcZ.png
-    Size: [364, 500]
 /tacoshy:
   null:
     Image: http://e.thumbs.redditmedia.com/A8nPRKqK-lIgiPIp.png
