--- a/emotes/mylittlensfw.yaml
+++ b/emotes/mylittlensfw.yaml
@@ -1,3 +1,35 @@
+/ajshake:
+  null:
+    Image: http://c.thumbs.redditmedia.com/AnTTFSQMzWG32Q2J.png
+    Size: [200, 142]
+/derpyshake:
+  null:
+    Image: http://d.thumbs.redditmedia.com/dTMf8vUpr3H1p36i.png
+    Size: [200, 142]
+/fluttershake:
+  null:
+    Image: http://e.thumbs.redditmedia.com/KNptApdRa7Q2o5cd.png
+    Size: [200, 142]
+/lolwhatisthisidonteven:
+  null:
+    Image: http://a.thumbs.redditmedia.com/65RFz5aX7WWdZ1k0.png
+    Size: [1700, 117]
+/pinkieshake:
+  null:
+    Image: http://d.thumbs.redditmedia.com/aLLkKhXAcGzLcXbE.png
+    Size: [200, 142]
+/rainbowshake:
+  null:
+    Image: http://c.thumbs.redditmedia.com/oJv9L-ps-r1fiTsb.png
+    Size: [200, 142]
+/rarshake:
+  null:
+    Image: http://a.thumbs.redditmedia.com/scNq2aHa9bhqSa00.png
+    Size: [200, 142]
+/rvinylshake:
+  null:
+    Image: http://b.thumbs.redditmedia.com/wJpqSdGt6QBakCAa.png
+    Size: [200, 142]
 /sphlyrafun:
   null:
     Image: http://f.thumbs.redditmedia.com/XbRIUePsEIGJ1xSM.png
@@ -6,3 +38,11 @@
   null:
     Image: http://a.thumbs.redditmedia.com/_15kSy25cbpye9fT.png
     Size: [500, 500]
+/twishake:
+  null:
+    Image: http://e.thumbs.redditmedia.com/-0Noimxj_BMbQpxF.png
+    Size: [200, 142]
+/vinylshake:
+  null:
+    Image: http://d.thumbs.redditmedia.com/jKDn6OksKvTASckW.png
+    Size: [200, 142]
