--- a/tags/mylittlefoodmanes.yaml
+++ b/tags/mylittlefoodmanes.yaml
@@ -32,9 +32,9 @@
 /rariberry: [+foodmane, +rarity]
 /rdskittles: [+foodmane, +rainbowdash]
 /rmallow: [+foodmane, +rarity]
+/sage: [+ocpony]
 /sagepuke: [+nonpony]
 /suckitave: [+nonpony]
-/t18: [+fluttershy, +foodmane, +manspike]
 /tacoshy: [+filly, +fluttershy, +foodmane]
 /themagicalcouch: [+berrypunch]
 /twiraptor: [+mashup, +twilightsparkle]
