--- a/tags/mylittlensfw.yaml
+++ b/tags/mylittlensfw.yaml
@@ -1,2 +1,12 @@
+/ajshake: [+animote, +applejack, +nsfw]
+/derpyshake: [+animote, +derpy, +nsfw]
+/fluttershake: [+animote, +fluttershy, +nsfw]
+/lolwhatisthisidonteven: [+remove]
+/pinkieshake: [+animot, +nsfw, +pinkiepie]
+/rainbowshake: [+animote, +nsfw, +rainbowdash]
+/rarshake: [+animote, +nsfw, +rarity]
+/rvinylshake: [+animote, +nsfw, +vinylscratch]
 /sphlyrafun: [+fun, +lyra, +nsfw]
 /sweetiebellesvirginmarshmallowpussy: [+nsfw, +sweetiebelle]
+/twishake: [+animote, +nsfw, +twilightsparkle]
+/vinylshake: [+animote, +nsfw, +vinylscratch]
