Rearrange tags file a bit, and add +daringdo to the list

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -29,6 +29,7 @@ TagAliases:
   +sweetiebelle: [+sb]
 
   +caketwins: [+poundcake, +pumpkincake]
+  +daringdo: [+dd]
   +grannysmith: [+granny]
   +nightmaremoon: [+nmm]
   +princesscelestia: [+tia]
@@ -36,11 +37,12 @@ TagAliases:
   +vinylscratch: [+djpony, +djpon3]
 
   +carrottop: [+goldenharvest]
+  +doctorwhooves: [+timeturner, +dw]
   +lyra: [+heartstrings]
   +soarin: [+soaren]
 
+  +ahuizotl: [+az]
   +opalescence: [+cat]
-  +doctorwhooves: [+timeturner, +dw]
 
   +pinkamina: [+pinkamena, +diane]
 
@@ -63,22 +65,32 @@ TagImplications:
   +sweetiebelle: [+canon, +cmc, +major, +pony]
 
   # Significant canon characters
+  +angel: [+canon, +major]
   +bigmac: [+canon, +major, +pony]
   +braeburn: [+canon, +major, +pony]
   +cadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
   +chrysalis: [+canon, +major, +pony, +villian]
+  +cockatrice: [+canon, +major]
+  +crankydoodle: [+canon, +major]
+  +daringdo: [+canon, +major, +pony]
   +derpy: [+canon, +major, +pony]
   +diamondtiara: [+canon, +major, +pony]
+  +discord: [+canon, +major, +villian]
   +fancypants: [+canon, +major, +pony]
   +fleurdelis: [+canon, +major, +pony]
   +flimandflam: [+canon, +major, +pony]
+  +gilda: [+canon, +major]
   +grannysmith: [+canon, +major, +pony]
+  +gummy: [+canon, +major]
   +hoitytoity: [+canon, +major, +pony]
+  +ironwill: [+canon, +major]
   +maredowell: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villian]
+  +opalescence: [+canon, +major]
+  +owlowiscious: [+canon, +major]
   +photofinish: [+canon, +major, +pony]
   +pip: [+canon, +major, +pony]
   +princesscelestia: [+canon, +major, +pony, +princess]
@@ -86,13 +98,17 @@ TagImplications:
   +shiningarmor: [+canon, +major, +pony]
   +silverspoon: [+canon, +major, +pony]
   +snipsandsnails: [+canon, +major, +pony]
+  +spike: [+canon, +major]
   +spitfire: [+canon, +major, +pony, +wonderbolt]
+  +stevenmagnet: [+canon, +major]
+  +tank: [+canon, +major]
   +trixie: [+canon, +major, +pony]
   +twist: [+canon, +major, +pony]
   +vinylscratch: [+canon, +major, +pony]
   +zecora: [+canon, +major, +pony]
 
-  # Background ponies
+  # Background characters
+  +ahuizotl: [+canon, +villian]
   +berrypunch: [+canon, +bgpony, +pony]
   +bonbon: [+canon, +bgpony, +pony]
   +carrottop: [+canon, +bgpony, +pony]
@@ -109,21 +125,6 @@ TagImplications:
   +rubypinch: [+canon, +bgpony, +pony]
   +soarin: [+canon, +bgpony, +pony, +wonderbolt]
 
-  # Non-pony canon characters
-  +discord: [+canon, +major, +villian]
-  +spike: [+canon, +major]
-  +angel: [+canon, +major]
-  +cockatrice: [+canon, +major]
-  +crankydoodle: [+canon, +major]
-  +gilda: [+canon, +major]
-  +gummy: [+canon, +major]
-  +ironwill: [+canon, +major]
-  +opalescence: [+canon, +major]
-  +owlowiscious: [+canon, +major]
-  +stevenmagnet: [+canon, +major]
-  +tank: [+canon, +major]
-  +misc: [+canon]
-
   # OC's
   +apathia: [+oc, +ocpony]
   +daylightdarkle: [+oc, +ocpony]
@@ -139,6 +140,7 @@ TagImplications:
   +squidward: [+nonpony]
 
   # Misc implications
+  +misc: [+canon]
   +nsfw: [+questionable]
   +ocpony: [+oc]
   +smooze: [+oldgen]
