--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -54,6 +54,7 @@ Subreddits:
 - mylittlekindle
 - mylittlelistentothis
 - mylittlelivestream
+- mylittlemotorhead
 - mylittlemusician
 - mylittlenanners
 - mylittlenopenopenope
