Tag update for r/mylittlemotorhead (+wildfire)

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -133,6 +133,7 @@ TagImplications:
   +jappleack: [+applejack, +oc, +ocpony]
   +karma: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
+  +wildfire: [+oc, +ocpony]
 
   # Nonpony
   +damon: [+nonpony]
