Stylesheet/emote/tag updates 2012-10-16

--- a/emotes/mylittleandysonic1.yaml
+++ b/emotes/mylittleandysonic1.yaml
@@ -27,6 +27,20 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -1689]
     Size: [210, 152]
+/ajsign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-2, -2]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /applejack!:
   null:
     CSS: {background-color: '#ffc97b!important', color: '#e56522!important', cursor: text!important}
@@ -178,6 +192,20 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -319]
     Size: [231, 152]
+/dashsign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-170, -2]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /derpfun:
   null:
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
@@ -198,6 +226,20 @@
     Image: http://a.thumbs.redditmedia.com/t0Qe4eaQITyTnykN.png
     Offset: [-290, -294]
     Size: [105, 102]
+/derpysign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-338, -2]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /disamused:
   null:
     Image: http://d.thumbs.redditmedia.com/jOBPugROP_GnaLro.png
@@ -527,6 +569,20 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -2297]
     Size: [202, 152]
+/lyrasign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-2, -154]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /macgasp:
   null:
     Image: http://b.thumbs.redditmedia.com/1fqFi0Cr8IOndBqy.png
@@ -594,6 +650,20 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -775]
     Size: [227, 152]
+/ppsign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-170, -154]
+    Size: [141, 200]
+  em:
+    CSS: {color: '#ed468e!important', font-family: '"Comic Sans"!important', font-size: 18px!important,
+      font-style: normal!important, left: 95%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 #b91072,0 1px black,1px 0 #b91072,0 -1px #b91072!important', text-transform: uppercase!important,
+      top: 105px!important, width: 115px!important}
+    Type: Custom
 /ppsly:
   null:
     Image: http://b.thumbs.redditmedia.com/1fqFi0Cr8IOndBqy.png
@@ -725,6 +795,20 @@
     Image: http://b.thumbs.redditmedia.com/1fqFi0Cr8IOndBqy.png
     Offset: [-144, -2743]
     Size: [85, 127]
+/scootasign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-313, -154]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /scootasmile:
   null:
     Image: http://d.thumbs.redditmedia.com/J1FVwBg6sOk2C8VE.png
@@ -841,6 +925,20 @@
     Image: http://a.thumbs.redditmedia.com/t0Qe4eaQITyTnykN.png
     Offset: [-198, -1158]
     Size: [256, 108]
+/twisign:
+  null:
+    CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important}
+    Image: http://f.thumbs.redditmedia.com/Y1nTaCVrMSUO_ExM.png
+    Offset: [-2, -356]
+    Size: [166, 150]
+  em:
+    CSS: {color: black!important, font-family: '"Comic Sans"!important', font-size: 24px!important,
+      font-style: normal!important, left: 90%!important, margin-left: -125px!important,
+      position: absolute!important, text-align: center!important, text-shadow: '-1px
+        0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
+      top: 45px!important, width: 100px!important}
+    Type: Custom
 /twiteehee:
   null:
     Image: http://b.thumbs.redditmedia.com/1fqFi0Cr8IOndBqy.png
