--- a/emotes/mylittlemotorhead.yaml
+++ b/emotes/mylittlemotorhead.yaml
@@ -3003,6 +3003,10 @@
     Image: http://e.thumbs.redditmedia.com/craJqX1YayP1v31j.png
     Offset: [0, -210]
     Size: [70, 70]
+/wfworking:
+  null:
+    Image: http://a.thumbs.redditmedia.com/7dlG_qOhFjBJPOQZ.png
+    Size: [200, 209]
 /whomeverthisis:
   null:
     Image: http://e.thumbs.redditmedia.com/craJqX1YayP1v31j.png
