--- a/emotes/tacoshy.yaml
+++ b/emotes/tacoshy.yaml
@@ -6,6 +6,10 @@
   null:
     Image: http://e.thumbs.redditmedia.com/uK_y3XOgWnlMuocp.jpg
     Size: [640, 400]
+/businesstaco:
+  null:
+    Image: http://d.thumbs.redditmedia.com/x0lZz4n3MP4ta5e9.png
+    Size: [600, 646]
 /butttacos:
   null:
     Image: http://e.thumbs.redditmedia.com/OAiPVNRSf--Fgspp.png
