--- a/emotes/thebestpony.yaml
+++ b/emotes/thebestpony.yaml
@@ -184,6 +184,11 @@
     Image: http://d.thumbs.redditmedia.com/1Zyd4zn8p2E66MrK.png
     Offset: [0, -280]
     Size: [70, 70]
+/areyounuts:
+  null:
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
+    Offset: [-468, -385]
+    Size: [150, 86]
 /assault:
   null:
     Image: http://a.thumbs.redditmedia.com/RgTq516oPE1qsv8B.png
@@ -191,7 +196,7 @@
     Size: [70, 70]
 /awesomecat:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-398, -385]
     Size: [70, 70]
 /babyplease:
@@ -2018,7 +2023,7 @@
     Size: [70, 70]
 /c22yum:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-273, -251]
     Size: [70, 70]
 /cbrushie:
@@ -2277,7 +2282,7 @@
     Size: [70, 70]
 /emufun:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Size: [273, 273]
 /emumask:
   null:
@@ -2463,7 +2468,7 @@
     Size: [100, 200]
 /gendercheckluna:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-273, -111]
     Size: [70, 70]
 /gildarage:
@@ -2473,7 +2478,7 @@
     Size: [70, 70]
 /giraffesintheair:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-273, 0]
     Size: [150, 111]
 /glutes:
@@ -2561,12 +2566,12 @@
     Size: [70, 70]
 /kballoon:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-423, -190]
     Size: [150, 195]
 /kdancefun:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [0, -273]
     Size: [248, 174]
 /koolaid:
@@ -2581,7 +2586,7 @@
     Size: [70, 70]
 /lira:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-248, -321]
     Size: [150, 113]
 /lookrose:
@@ -2636,7 +2641,7 @@
     Size: [70, 70]
 /missingno:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-343, -111]
     Size: [70, 70]
 /molest:
@@ -2685,7 +2690,7 @@
     Size: [70, 70]
 /noods:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-273, -181]
     Size: [70, 70]
 /nyomnyom:
@@ -2705,7 +2710,7 @@
     Size: [70, 70]
 /oldsmash:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-423, 0]
     Size: [150, 190]
 /omelet:
@@ -6763,6 +6768,10 @@
     Image: http://b.thumbs.redditmedia.com/YAdUP5WBAbJgCNqg.png
     Offset: [-70, -630]
     Size: [70, 70]
+/sbsurprise:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RNIjUv3gPHoJeHEj.png
+    Size: [156, 200]
 /scfear:
   null:
     Image: http://d.thumbs.redditmedia.com/_mwD09WQ1MyFraOW.png
@@ -6921,7 +6930,7 @@
     Size: [70, 70]
 /thisiswhywecanhavenicethings:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-343, -251]
     Size: [70, 70]
 /thumbsup:
@@ -7096,7 +7105,7 @@
     Size: [70, 70]
 /valerie:
   null:
-    Image: http://b.thumbs.redditmedia.com/ZtxW5y61z3KJNHCg.png
+    Image: http://e.thumbs.redditmedia.com/Me3ttkmNA_WGr_9p.png
     Offset: [-343, -181]
     Size: [70, 70]
 /waffleheart:
