--- a/tags/mylittleandysonic1.yaml
+++ b/tags/mylittleandysonic1.yaml
@@ -4,6 +4,7 @@
 /ajFoF: [+applejack]
 /ajfof: [+v]
 /ajfun: [+applejack, +fun, +questionable]
+/ajsign: [+applejack, +imagemacro]
 /applejack!: [+formatting]
 /applepuff: [+applejack, +mashup]
 /artfun: [+fun, +ocpony, +questionable]
@@ -35,10 +36,12 @@
 /creamsicle: [+ocpony]
 /darkfun: [+fun, +ocpony, +questionable]
 /dashfun: [+fun, +questionable, +rainbowdash]
+/dashsign: [+imagemacro, +rainbowdash]
 /derpfun: [+derpy, +fun, +questionable]
 /derpoops: [+derpy]
 /derpshrug: [+derpy]
 /derpsrs: [+derpy]
+/derpysign: [+derpy, +imagemacro]
 /disamused: [+discord]
 /disangry: [+discord]
 /disbored: [+discord]
@@ -105,6 +108,7 @@
 /luna!: [+formatting]
 /lunadark: [+princessluna]
 /lyrafun: [+fun, +lyra, +questionable]
+/lyrasign: [+imagemacro, +lyra]
 /macgasp: [+bigmac]
 /noidea: [+nonpony]
 /notenoughbooks: [+twilightsparkle]
@@ -119,6 +123,7 @@
 /ppfacehoof: [+pinkiepie]
 /ppfof: [+pinkiepie]
 /ppfun: [+fun, +pinkiepie, +questionable]
+/ppsign: [+imagemacro, +pinkiepie]
 /ppsly: [+pinkiepie]
 /ppsoawesome: [+pinkiepie]
 /ppteeth: [+pinkiepie]
@@ -145,6 +150,7 @@
 /sbeyeroll: [+sweetiebelle]
 /sbgrin: [+sweetiebelle]
 /sbshy: [+sweetiebelle]
+/scootasign: [+imagemacro, +scootaloo]
 /scootasmile: [+scootaloo]
 /scootawat: [+scootaloo]
 /scootscared: [+scootaloo]
@@ -165,6 +171,7 @@
 /twinuzzle: [+twilightsparkle]
 /twipoke: [+mashup, +twilightsparkle]
 /twiread: [+twilightsparkle]
+/twisign: [+imagemacro, +twilightsparkle]
 /twiteehee: [+twilightsparkle]
 /twiteeth: [+twilightsparkle]
 /twithis: [+v]
