--- a/tags/mylittlelistentothis.yaml
+++ b/tags/mylittlelistentothis.yaml
@@ -35,11 +35,13 @@
 /phei: [+filly, +twilightsparkle]
 /pheicry: [+animote, +filly, +twilightsparkle]
 /pheidance: [+animote, +filly, +twilightsparkle]
+/pheispinkieplushie: [+nonpony, +pinkiepie]
 /pinkiebone: [+pinkiepie]
 /pinkieshock: [+pinkiepie]
 /pinkiesing: [+pinkiepie]
 /pinkietrombone: [+v]
 /pokerlee: [+cheerilee]
+/ppp: [+v]
 /rarityumm: [+rarity]
 /rdheadbang: [+rainbowdash, +sunglasses]
 /rdheh: [+rainbowdash]
