--- a/tags/tacoshy.yaml
+++ b/tags/tacoshy.yaml
@@ -1,5 +1,6 @@
 /beforetacoswerecool: [+fluttershy, +foodmane]
 /bryofapproval: [+ocpony]
+/businesstaco: [+fluttershy, +foodmane]
 /butttacos: [+animote, +fluttershy, +foodmane]
 /datass: [+nonpony]
 /fillytaco: [+fluttershy, +foodmane]
