--- a/tags/thebestpony.yaml
+++ b/tags/thebestpony.yaml
@@ -36,6 +36,7 @@
 /ajyikes: [+applejack]
 /angrilee: [+cheerilee]
 /archersaur: [+nonpony]
+/areyounuts: [+pinkiepie]
 /assault: [+pinkiepie]
 /awesomecat: [+nonpony]
 /babyplease: [+nonpony]
@@ -1357,6 +1358,7 @@
 /sbfear: [+sweetiebelle]
 /sbscheme: [+sweetiebelle]
 /sbstyle: [+sweetiebelle]
+/sbsurprise: [+animote, +sweetiebelle]
 /scfear: [+scootaloo]
 /scootagram: [+scootaloo]
 /scootahat: [+scootaloo]
