--- a/emotes/mylittlelistentothis.yaml
+++ b/emotes/mylittlelistentothis.yaml
@@ -160,7 +160,7 @@
     Size: [90, 90]
 /phei:
   null:
-    Image: http://f.thumbs.redditmedia.com/2Knv8WhbCyIF0Uvw.png
+    Image: http://a.thumbs.redditmedia.com/8EHJM305b6rA_atT.png
     Size: [90, 92]
 /pheicry:
   null:
@@ -170,6 +170,11 @@
   null:
     Image: http://e.thumbs.redditmedia.com/8epVY5b9BqQr1Hkp.png
     Size: [100, 102]
+/pheispinkieplushie:
+  null:
+    Image: http://a.thumbs.redditmedia.com/8EHJM305b6rA_atT.png
+    Offset: [-92, 0]
+    Size: [238, 269]
 /pinkiebone:
   null:
     Image: http://e.thumbs.redditmedia.com/cPVjjjJ-QcdrsTrR.png
@@ -195,6 +200,11 @@
     Image: http://e.thumbs.redditmedia.com/L7zH-FChTTGLTkML.png
     Offset: [-182, -182]
     Size: [90, 90]
+/ppp:
+  null:
+    Image: http://a.thumbs.redditmedia.com/8EHJM305b6rA_atT.png
+    Offset: [-92, 0]
+    Size: [238, 269]
 /rarityumm:
   null:
     Image: http://e.thumbs.redditmedia.com/L7zH-FChTTGLTkML.png
