--- a/tags/mylittlemotorhead.yaml
+++ b/tags/mylittlemotorhead.yaml
@@ -1,5 +1,5 @@
 /flutterbike: [+fluttershy]
 /rallytwi: [+pinkiepie, +twilightsparkle]
 /stigpony: [+ocpony]
-/wfworking: [+animiote, +wildfire]
+/wfworking: [+animote, +wildfire]
 /wildstig: [+wildfire]
