--- a/tags/mylittlensfw.yaml
+++ b/tags/mylittlensfw.yaml
@@ -2,7 +2,7 @@
 /derpyshake: [+animote, +derpy, +nsfw]
 /fluttershake: [+animote, +fluttershy, +nsfw]
 /lolwhatisthisidonteven: [+remove]
-/pinkieshake: [+animot, +nsfw, +pinkiepie]
+/pinkieshake: [+animote, +nsfw, +pinkiepie]
 /rainbowshake: [+animote, +nsfw, +rainbowdash]
 /rarshake: [+animote, +nsfw, +rarity]
 /rvinylshake: [+animote, +nsfw, +vinylscratch]
