Stylesheet/emote/tag updates 2012-10-18

--- a/emotes/applejack.yaml
+++ b/emotes/applejack.yaml
@@ -1,150 +1,150 @@
 /aj00:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Size: [70, 70]
 /aj01:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -70]
     Size: [70, 70]
 /aj02:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -140]
     Size: [70, 70]
 /aj03:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -210]
     Size: [70, 70]
 /aj04:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -280]
     Size: [70, 70]
 /aj05:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -350]
     Size: [70, 70]
 /aj06:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -420]
     Size: [70, 70]
 /aj07:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -490]
     Size: [70, 70]
 /aj08:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -560]
     Size: [70, 70]
 /aj09:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [0, -630]
     Size: [70, 70]
 /aj10:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, 0]
     Size: [70, 70]
 /aj11:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -70]
     Size: [70, 70]
 /aj12:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -140]
     Size: [70, 70]
 /aj13:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -210]
     Size: [70, 70]
 /aj14:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -280]
     Size: [70, 70]
 /aj15:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -350]
     Size: [70, 70]
 /aj16:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -420]
     Size: [70, 70]
 /aj17:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -490]
     Size: [70, 70]
 /aj18:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -560]
     Size: [70, 70]
 /aj19:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-70, -630]
     Size: [70, 70]
 /aj20:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, 0]
     Size: [70, 70]
 /aj21:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -70]
     Size: [70, 70]
 /aj22:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -140]
     Size: [70, 70]
 /aj23:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -210]
     Size: [70, 70]
 /aj24:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -280]
     Size: [70, 70]
 /aj25:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -350]
     Size: [70, 70]
 /aj26:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -420]
     Size: [70, 70]
 /aj27:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -490]
     Size: [70, 70]
 /aj28:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -560]
     Size: [70, 70]
 /aj29:
   null:
-    Image: http://b.thumbs.redditmedia.com/tAVdTAJ19CQIKOTy.png
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
     Offset: [-140, -630]
     Size: [70, 70]
 /ja00:
