--- a/emotes/mylittlecirclejerk.yaml
+++ b/emotes/mylittlecirclejerk.yaml
@@ -1,6 +1,10 @@
+/SWAPSPACE:
+  null:
+    Image: http://f.thumbs.redditmedia.com/0Fr3gH0gBwtd9okw.png
+    Size: [19000, 19000]
 /TI994A:
   null:
-    Image: http://f.thumbs.redditmedia.com/ZbarrHcKP0p76T0q.png
+    Image: http://f.thumbs.redditmedia.com/4MBjjmqg_iua0ws5.jpg
     Size: [230, 364]
 /applewut:
   null:
