--- a/emotes/ploungemafia.yaml
+++ b/emotes/ploungemafia.yaml
@@ -27,6 +27,10 @@
   null:
     Image: http://c.thumbs.redditmedia.com/b--VIpwPEUH_cj7J.png
     Size: [120, 120]
+/mafiaduck:
+  null:
+    Image: http://a.thumbs.redditmedia.com/gG9jeCFoXt6fOb4l.png
+    Size: [93, 90]
 /mafiafluttershy:
   null:
     Image: http://c.thumbs.redditmedia.com/b--VIpwPEUH_cj7J.png
