--- a/emotes/rubypinch.yaml
+++ b/emotes/rubypinch.yaml
@@ -38,3 +38,12 @@
     Image: http://e.thumbs.redditmedia.com/pK-OiltO0DYhtL0L.png
     Offset: [-91, -323]
     Size: [89, 90]
+/rubystare:
+  null:
+    Image: http://e.thumbs.redditmedia.com/pK-OiltO0DYhtL0L.png
+    Offset: [-91, -323]
+    Size: [89, 90]
+/rubytrot:
+  null:
+    Image: http://e.thumbs.redditmedia.com/MASGVK9vcdTBNixX.png
+    Size: [50, 50]
