--- a/emotes/vinylscratch.yaml
+++ b/emotes/vinylscratch.yaml
@@ -1,6 +1,6 @@
 /hnnng:
   null:
-    Image: http://d.thumbs.redditmedia.com/00T3gLdOawm80o--.png
+    Image: http://d.thumbs.redditmedia.com/C69rJDzRD6Sa_fN9.png
     Size: [70, 70]
 /laying:
   null:
@@ -192,6 +192,10 @@
   null:
     Image: http://e.thumbs.redditmedia.com/G_rsYZol8TuWOhov.png
     Offset: [-74, -456]
+    Size: [70, 70]
+/vsdrawponies:
+  null:
+    Image: http://d.thumbs.redditmedia.com/C69rJDzRD6Sa_fN9.png
     Size: [70, 70]
 /vsfilly:
   null:
