--- a/tags/applejack.yaml
+++ b/tags/applejack.yaml
@@ -16,7 +16,7 @@
 /aj15: [+applejack]
 /aj16: [+applejack, +salute]
 /aj17: [+applejack]
-/aj18: [+remove]
+/aj18: [+applejack]
 /aj19: [+remove]
 /aj20: [+applejack]
 /aj21: [+applejack]
