--- a/tags/mylittlensfw.yaml
+++ b/tags/mylittlensfw.yaml
@@ -1,4 +1,5 @@
 /ajshake: [+animote, +applejack, +nsfw]
+/bestcentaur: [+nonpony, +sweetiebelle]
 /derpyshake: [+animote, +derpy, +nsfw]
 /fluttershake: [+animote, +fluttershy, +nsfw]
 /lolwhatisthisidonteven: [+remove]
