--- a/tags/vinylscratch.yaml
+++ b/tags/vinylscratch.yaml
@@ -35,6 +35,7 @@
 /vscute: [+filly, +vinylscratch]
 /vsdeal: [+sunglasses, +vinylscratch]
 /vsderp: [+vinylscratch]
+/vsdrawponies: [+vinylscratch]
 /vsfilly: [+filly, +vinylscratch]
 /vshair: [+vinylscratch]
 /vshappy: [+vinylscratch]
