--- a/emotes/mylittlensfw.yaml
+++ b/emotes/mylittlensfw.yaml
@@ -2,6 +2,11 @@
   null:
     Image: http://c.thumbs.redditmedia.com/AnTTFSQMzWG32Q2J.png
     Size: [200, 142]
+/bestcentaur:
+  null:
+    Image: http://e.thumbs.redditmedia.com/5ndsCluVaPSIsPOR.png
+    Offset: [0, -220]
+    Size: [225, 250]
 /derpyshake:
   null:
     Image: http://d.thumbs.redditmedia.com/dTMf8vUpr3H1p36i.png
@@ -36,8 +41,8 @@
     Size: [201, 136]
 /sweetiebellesvirginmarshmallowpussy:
   null:
-    Image: http://a.thumbs.redditmedia.com/_15kSy25cbpye9fT.png
-    Size: [500, 500]
+    Image: http://e.thumbs.redditmedia.com/5ndsCluVaPSIsPOR.png
+    Size: [225, 220]
 /twishake:
   null:
     Image: http://e.thumbs.redditmedia.com/-0Noimxj_BMbQpxF.png
