--- a/tags/ploungemafia.yaml
+++ b/tags/ploungemafia.yaml
@@ -4,6 +4,7 @@
 /mafiacelestia: [+filly, +mafia, +princesscelestia]
 /mafiachrysalis: [+chrysalis, +filly, +mafia]
 /mafiadash: [+filly, +mafia, +rainbowdash]
+/mafiaduck: [+misc]
 /mafiafluttershy: [+filly, +fluttershy, +mafia]
 /mafialuna: [+filly, +mafia, +princessluna]
 /mafialyra: [+filly, +lyra, +mafia]
