Fix merged emotes not working at all anymore

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -112,8 +112,8 @@ Generation:
           Image: http://a.thumbs.redditmedia.com/upicooe6wp8FpQ80.png
           Offset: [-140, -350]
           Size: [70, 70]
-    - /rdsad: [+rainbowdash, +drop, +hidden]
-      /rrdsad: [+v, +drop]
+    - /rdsad: [+drop, +hidden, +v]
+      /rrdsad: [+drop, +v]
 
   # Removed
   - - MergeEmotes
